# drone_racing_group_1

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cameramask/share/cameramask/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/droneRace/share/droneRace/: local_setup.sh  package.sh  package.xml  package.zsh
install/dronerace/share/dronerace/: local_setup.sh  package.bash  package.sh  package.xml
install/racingdrone/share/racingdrone/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
log/: latest_build
scripts/: cameramask.py  flythroughgatenew.py  juustoateria.py  kerroshampurilainen.py  originalflythrough.py
src/dronerace/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build
src/racingdrone/: CMakeLists.txt
src/racingdrone/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/racingdrone/install/racingdrone/share/ament_index/resource_index/parent_prefix_path/: racingdrone
src/racingdrone/install/racingdrone/share/racingdrone/: local_setup.dsv  local_setup.sh  package.sh  package.xml  package.zsh
src/racingdrone/log/: latest_build
src/racingdrone/scripts/: cameramask.py
src/tello_ros/: README.md
src/tello_ros/cameramask/: package.xml  setup.cfg  setup.py
src/tello_ros/docker/: Dockerfile
src/tello_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/tello_ros/log/: latest  latest_build
src/tello_ros/tello_msgs/: CMakeLists.txt
(+71 files in other folders)
